add leaderboard back