@@ -5,6 +5,7 @@ import com.school21.Tic_Tac_Toe.datasource.mapper.StatsDataMapper;
 import com.school21.Tic_Tac_Toe.datasource.model.GameEntity;
 import com.school21.Tic_Tac_Toe.domain.model.game.Game;
 import com.school21.Tic_Tac_Toe.domain.model.game.GameStatus;
+import com.school21.Tic_Tac_Toe.domain.model.stats.UserRatioModel;
 import com.school21.Tic_Tac_Toe.domain.model.stats.UserStatsModel;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
@@ -13,7 +14,6 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -43,7 +43,7 @@ public class GameRepositoryImpl implements GameRepository {
                         Sort.by(Sort.Direction.ASC, "startTime"))
                 .stream()
                 .map(GameDataMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -54,7 +54,7 @@ public class GameRepositoryImpl implements GameRepository {
                         Sort.by(Sort.Direction.ASC, "startTime"))
                 .stream()
                 .map(GameDataMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -65,11 +65,19 @@ public class GameRepositoryImpl implements GameRepository {
                         Sort.by(Sort.Direction.ASC, "startTime"))
                 .stream()
                 .map(GameDataMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserStatsModel getUserStats(UUID userId) {
         return StatsDataMapper.toStatsModel(gameRepository.getStatsByUserId(userId));
+    }
+
+    @Override
+    public List<UserRatioModel> getLeaderBoard(int limit) {
+        return gameRepository.getLeaderBoard(limit)
+                .stream()
+                .map(StatsDataMapper::toRatioModel)
+                .toList();
     }
 }
